# pledgeandcrowns

./: .git-commit-msg.txt  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  LICENSE.md  README.md
.cargo/: config.toml
.claude/: audit-gaps.md
.claude/agents/: art-lead.md  rust-lead.md  voice-editor.md
.claude/agents/dormant/: audit-extender.md  security-reviewer.md
.claude/reviews/: rust-lead-2026-05-02-b212d61.md  voice-2026-05-02-batch1-art-aligned.md  voice-2026-05-02-batch2-art-aligned.md  voice-2026-05-02.md
.claude/state/: rust-lead-cursor.txt  voice-editor-cursor.txt
compile-api/: Cargo.toml
compile-api/src/: cargo_grader.rs  grader.rs  lib.rs  main.rs  wasm_builder.rs  wasm_runner.rs
compile-api/tests/: cargo_grader.rs  http.rs  http_real.rs  wasm_builder.rs  wasm_runner.rs
design/: 00-vision.md  01-curriculum.md  02-mechanics.md  03-art-style-bible.md  04-art-handoff-prompts.md  04b-art-deliverables.md  05-tech-architecture.md  06-mvp-scope.md  07-monetization.md  08-temple-appendix.md
design/art/: Pledge & Crown - Reference Set.html  design-mode-prompts.md  palette.js  pixel-art.jsx
design/art/refs/: artboard-frame.jsx  palette-legend.jsx  ref-01-player.jsx  ref-02-ferris.jsx  ref-03-borrow-checker.jsx  ref-04-tiles-village.jsx  ref-05-tiles-tower.jsx  ref-06-editor.jsx  ref-07-goblin.jsx  ref-08-potion.jsx  ref-09-worldmap-v2.jsx  ref-09-worldmap.jsx  ref-10-title.jsx  ref-11-smith.jsx  ref-12-cartographer.jsx  ref-13-trait-mage.jsx  ref-14-bellringer.jsx  ref-15-cooper.jsx  ref-16-oracle.jsx  ref-17-herald.jsx  ref-18-twin.jsx  ref-19-tinker.jsx  ref-20-heraldic-sage.jsx  ref-21-forgewright.jsx  ref-22-linguist.jsx  ref-23-pilgrim.jsx  ref-24-drillmaster.jsx  ref-25-reckoner.jsx  ref-26-quartermaster.jsx  ref-27-auditor.jsx  ref-28-chronicler.jsx  ref-29-alchemist.jsx  ref-30-guildmaster.jsx  ref-31-recruiter.jsx  ref-32-locksmith.jsx  ref-33-porter.jsx  ref-34-surveyor.jsx  ref-35-armorer.jsx  ref-36-vexis.jsx  ref-37-wandwright.jsx  (+28 more)
design/art/specs/: alchemist.md  armorer.md  auditor.md  barkeep.md  bellringer.md  bondsmith.md  bouncer.md  cartographer.md  cellarer.md  chronicler.md  conjurer.md  cooper.md  dockmaster.md  drillmaster.md  familiar.md  forgewright.md  ghostkeeper.md  guildmaster.md  harbormaster.md  herald.md  heraldic-sage.md  interpreter.md  keymaster.md  lanternkeeper.md  lighthousekeeper.md  linguist.md  locksmith.md  loremaster.md  mixologist.md  oracle.md  pilgrim.md  porter.md  quartermaster.md  reckoner.md  recruiter.md  riveter.md  sharekeeper.md  sifter.md  signaler.md  smelter.md  (+15 more)
docs/superpowers/specs/: 2026-06-18-act3-guildhall-missions-design.md  2026-06-18-act4-trait-tower-missions-design.md  2026-06-18-act5-tavern-missions-design.md  2026-06-18-act6-iterator-forge-missions-design.md  2026-06-18-act7-concurrent-coast-missions-design.md  2026-06-19-act8-vault-pointers-missions-design.md
game/: Cargo.toml
game/src/: assets.rs  lib.rs  main.rs
game/src/plugins/: audio.rs  compile_client.rs  editor.rs  mission.rs  mod.rs  npc.rs  player.rs  progress.rs  quest_marker.rs  screenshot.rs  state.rs  stub_grader.rs  title.rs  world.rs
game/tests/: assets.rs  bevy_smoke.rs  contract.rs  registry.rs  stub_grader.rs
mobile/: README.md  build-android.ps1  build-desktop.bat  install-android-ndk.ps1
mobile/src-tauri/: Cargo.toml  tauri.conf.json
pitch/: .gitignore  build-deck.ps1  capture-world.ps1  deck.template.html  qa-shots.ps1
prompts/: bosses.md  characters.md  tilesets.md  ui.md
scripts/: art-review-sheet.ps1  audio-to-midi.ps1  audioldm2-gen.ps1  ci.ps1  dev.ps1  install-hooks.ps1  pre-commit.sh  render-refs-inline.html  render-refs.md  render-refs.py  sprite-compare.ps1  synthwave-fanout.ps1  synthwave-gen.ps1  upscale-batch5.ps1  verify-batch5-grids.ps1  web-build.ps1
tools/audio-to-midi/: .gitignore  README.md  manifest.json  requirements.txt  transcribe.py
tools/audioldm2-gen/: .gitignore  README.md  generate.py  manifest.json  requirements.txt
tools/render-refs/: Cargo.toml  build.rs
tools/render-refs/src/: main.rs
tools/synthwave-gen/: README.md  fanout.py  generate.py  manifest.json  requirements.txt
tools/web-serve/: Cargo.toml
tools/web-serve/src/: main.rs
web/: index.html
