[workspace]
resolver = "3"
members = [
    "game",
    "compile-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Matt Gates <mmichels88@gmail.com>"]
# Dual-licensed: game crate is MIT, compile-api crate is AGPL-3.0-or-later.
# Per-crate `license` fields override; do not set a workspace-level license.
repository = "https://github.com/pledgeandcrown/pledgeandcrown"

[workspace.dependencies]
# Game engine. Pinned to current stable as of 2026-03-04.
# Doc text was written against 0.14; we scaffold against 0.18 and iterate.
bevy = { version = "0.18", default-features = false }
bevy_egui = "0.39"
bevy_ecs_tilemap = "0.18"
bevy_kira_audio = "0.25"
# egui_code_editor 0.2 (latest) pins egui ^0.34; bevy_egui 0.39 ships
# egui ^0.33. Diamond unfixable upstream as of 2026-05-02. Hand-rolled
# Rust syntax highlighter via TextEdit::multiline + LayoutJob lives in
# game/src/plugins/editor.rs.
# egui_code_editor = "0.2"

# Logging. Verbose tracing everywhere per global rule.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Errors.
anyhow = "1"
thiserror = "2"

# Serde / persistence.
serde = { version = "1", features = ["derive"] }
bincode = "2"

# Async runtime (for compile-api).
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

# Bevy recommends opt-level=1 for dev to keep iteration speed sane.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
