[workspace]
resolver = "3"
members = [
    "game",
    "compile-api",
    "tools/render-refs",
    "tools/web-serve",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Matt Gates <mmichels88@gmail.com>"]
# Dual-licensed: game crate is MIT, compile-api crate is AGPL-3.0-or-later.
# Per-crate `license` fields override; do not set a workspace-level license.
repository = "https://github.com/pledgeandcrown/pledgeandcrown"

[workspace.dependencies]
# Game engine. Pinned to current stable as of 2026-03-04.
# Doc text was written against 0.14; we scaffold against 0.18 and iterate.
bevy = { version = "0.18", default-features = false }
bevy_egui = "0.39"
bevy_ecs_tilemap = "0.18"
bevy_kira_audio = "0.25"
# egui_code_editor 0.2 (latest) pins egui ^0.34; bevy_egui 0.39 ships
# egui ^0.33. Diamond unfixable upstream as of 2026-05-02. Hand-rolled
# Rust syntax highlighter via TextEdit::multiline + LayoutJob lives in
# game/src/plugins/editor.rs.
# egui_code_editor = "0.2"

# Logging. Verbose tracing everywhere per global rule.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Errors.
anyhow = "1"
thiserror = "2"

# Serde / persistence.
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

# Async runtime (for compile-api).
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client for the in-game editor -> compile-API round trip.
# rustls-tls keeps us off OpenSSL on Windows; we only hit 127.0.0.1
# in dev but pinning the TLS backend matters when the API moves to
# the Hetzner VPS.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# tools/render-refs only — pixel-art ASCII grids → PNG. No browser
# dependency, no Babel, no React, no CDN. Replaced the old web harness.
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

# Bevy recommends opt-level=1 for dev to keep iteration speed sane.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
