[package]
name = "pledge_compile_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
description = "Pledge & Crown - server-side compile-to-WASM API. See design/05-tech-architecture.md sec 2."

[lib]
name = "pledge_compile_api"
path = "src/lib.rs"

[[bin]]
name = "pledge_compile_api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid = { version = "1", features = ["v4"] }

# WASM execution sandbox. Pinned to wasmtime/wasmtime-wasi 44.0 (released
# in lockstep). The `p1` feature on wasmtime-wasi exposes the WASIp1 /
# preview1 surface used by `_start`-style WASI modules emitted by
# wasm32-wasip1 Rust toolchains.
wasmtime = "44"
wasmtime-wasi = { version = "44", features = ["p1"] }

[dev-dependencies]
reqwest = { workspace = true }
serde_json = "1"
wat = "1"
