# Standalone workspace: this empty [workspace] detaches the Tauri shell
# from the repo-root cargo workspace (game / compile-api / tools/*), so
# `cargo build --workspace` at the root stays fast and this crate's heavier
# webview deps (wry / tao / webview2) don't couple into the game's lockfile.
[workspace]

[package]
name = "app"
version = "0.1.0"
description = "Pledge & Crown - Tauri 2.0 wrapper around the wasm web build"
authors = ["Matt Gates <mmichels88@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
