[package]
name = "render-refs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
description = "Render Pledge & Crown ASCII-grid sprite refs to PNG. Dog-foods the Rust-first rule: no Babel, no React, no Python decoder, no browser."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image.workspace = true
regex.workspace = true
walkdir.workspace = true
